--- a/MainSKI/WebSKI/index.html
+++ b/MainSKI/WebSKI/index.html
@@ -1,25 +1,20 @@
 ﻿<!DOCTYPE html>
-
 <html ng-app="SKI">
-<head>
-    <title>Sønderborg Køkken Industri - Ordrebekræftelses håndterings-side</title>
-	<meta charset="utf-8" />
+<head>    
+    <!--<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">-->
+    <title>Sønderborg Køkken Industri - Ordrebekræftelses håndterings-side</title>    
     <link href="css/bootstrap.css" rel="stylesheet" />
 </head>
 <body ng-controller="skiController">
 
-      
-
     <!--Views goes here:-->
-    <div ng-view ng-model="orders"></div>
+    <div ng-view></div>
 
-
-    <!--BootScripts:-->    
-    <script src="framework/jquery-2.1.4.min.js"></script>  
+    <!--BootScripts:-->
+    <script src="framework/jquery-2.1.4.min.js"></script>
     <script src="framework/bootstrap.min.js"></script>
     <script src="framework/angular.min.js"></script>
     <script src="framework/angular-route.min.js"></script>
-    
 
     <!--Modules:-->
     <script src="scripts/SKIModule.js"></script>
