- Fixed Encoding Issue. - Fixed Date issue. - Fixed "Anuller" issue. - Gave almost everything a facelift. - Just remebered - I did -not- read the report. too late now. kthxbai!

--- a/MainSKI/WebSKI/index.html
+++ b/MainSKI/WebSKI/index.html
@@ -1,11 +1,13 @@
 ﻿<!DOCTYPE html>
 <html ng-app="SKI">
-<head>    
+<head> 
+    <meta charset="utf-8" />    
     <!--<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">-->
     <title>Sønderborg Køkken Industri - Ordrebekræftelses håndterings-side</title>    
     <link href="css/bootstrap.css" rel="stylesheet" />
+    <link href="css/style.css" rel="stylesheet" />
 </head>
-<body ng-controller="skiController">
+<body ng-controller="skiController" ng-bin>
 
     <!--Views goes here:-->
     <div ng-view></div>
